WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28655
REGRESSION(
r47639
-
r47660
): Webkit crashes on launch on PowerPC
https://bugs.webkit.org/show_bug.cgi?id=28655
Summary
REGRESSION(r47639-r47660): Webkit crashes on launch on PowerPC
John Kieken
Reported
2009-08-22 07:56:48 PDT
Created
attachment 38433
[details]
Safari Crash Log Webkit crashes immediately on launch or while re-loading tabs. The following versions are failing on PPC in OS X 10.4.11
r47668
r47667
r47660
The last working version is
r47639
Crash log attached... only 8/22/09 entries are relevant.
Attachments
Safari Crash Log
(4.27 MB, application/octet-stream)
2009-08-22 07:56 PDT
,
John Kieken
no flags
Details
Patch v1
(1.64 KB, patch)
2009-08-22 21:45 PDT
,
Maciej Stachowiak
no flags
Details
Formatted Diff
Diff
Patch v1
(1.12 KB, patch)
2009-08-22 22:02 PDT
,
Maciej Stachowiak
mrowe
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-08-22 14:07:14 PDT
***
Bug 28656
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 2
2009-08-22 14:11:54 PDT
This is probably due to <
http://trac.webkit.org/changeset/47641
>.
Mark Rowe (bdash)
Comment 3
2009-08-22 17:33:25 PDT
***
Bug 28660
has been marked as a duplicate of this bug. ***
Maciej Stachowiak
Comment 4
2009-08-22 21:45:49 PDT
Created
attachment 38443
[details]
Patch v1
Mark Rowe (bdash)
Comment 5
2009-08-22 21:49:33 PDT
Comment on
attachment 38443
[details]
Patch v1 r=me (without the Platform.h changes!)
Maciej Stachowiak
Comment 6
2009-08-22 22:02:28 PDT
Created
attachment 38444
[details]
Patch v1
Mark Rowe (bdash)
Comment 7
2009-08-22 22:04:08 PDT
Comment on
attachment 38444
[details]
Patch v1 r=me
Mark Rowe (bdash)
Comment 8
2009-08-23 01:43:18 PDT
***
Bug 28662
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 9
2009-08-23 01:43:51 PDT
***
Bug 28653
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 10
2009-08-23 01:44:43 PDT
Maciej landed this in
r47686
, and there's a new nightly build up that contains this fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug