REGRESSION(r47639-r47660): Webkit crashes on launch on PowerPC https://bugs.webkit.org/show_bug.cgi?id=28655

Reviewed by Mark Rowe.

* runtime/JSFunction.cpp:
(JSC::JSFunction::JSFunction): Initialize properly with a VPtrHackExecutable.
* wtf/Platform.h:



Canonical link: https://commits.webkit.org/39265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47686 268f45cc-cd09-0410-ab3c-d52691b4dbfc