JavaScriptCore/runtime/JSFunction.cpp
@@ -52,9 +52,7 @@ bool JSFunction::isHostFunctionNonInline() const
 
 JSFunction::JSFunction(PassRefPtr<Structure> structure)
     : Base(structure)
-#if ENABLE(JIT)
     , m_executable(adoptRef(new VPtrHackExecutable()))
-#endif
 {
 }
 
